# rizhiyi-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
config/: Api_5.3_schema.yaml  Api_5.3_schema_agent.yaml  Api_5.3_schema_mini.yaml  Api_5.6_schema.yaml
python/: .env.example  pyproject.toml
python/rizhiyi_mcp/: auth.py  config.py  dashboard_aesthetics.py  dashboard_layout.py  dashboard_server.py  dashboard_templates.py  dashboard_utils.py  gateway.py  http_client.py  log_tools_business.py  log_tools_definitions.py  log_tools_server.py  main.py  openapi_schema.py  server_registry.py  servers.py  service_fieldconfig.py  service_ingest.py  service_parserrule.py  service_servers.py  service_tooling.py  shared_result_store.py  types.py
python/rizhiyi_mcp_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/tests/: refresh_api_fixtures.py  support.py  test_dashboard_server.py  test_fixture_refresh.py  test_gateway.py  test_log_tools_business.py  test_parserrule_service.py
scripts/: http-smoke-test.mjs
src/: auth-context.ts  auth-header.ts  client.ts  config.ts  custom_tools_server.ts  dashboard-server.ts  fieldconfig-server.ts  http-server.ts  ingest-server.ts  log-tools-server.ts  manage-server.ts  mcp-tool-helpers.ts  openapi_server.ts  parserrule-server.ts  result-formatter.ts  runtime-entry.ts  server-registry.ts  shared-result-store.ts  tool-annotations.ts  tools.ts  types.ts
src/modules/: anomaly-detection.ts  dashboard.ts  fieldconfig.ts  ingest.ts  log-search.ts  (+7 more)
(+10 files in other folders)
